# python-actions

./: CONTRIBUTING.md  README.md
.github/: CODEOWNERS  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/test_projects/minimal/: pyproject.toml
.github/test_projects/mypy-errors/: pyproject.toml
.github/test_projects/mypy-errors/src/test_project/: mypy-errors.py
.github/test_projects/ni-python-styleguide-errors/: pyproject.toml
.github/test_projects/ni-python-styleguide-errors/src/test_project/: __init__.py  ni-python-styleguide-errors.py
.github/test_projects/only-ni-python-styleguide/: pyproject.toml
.github/test_projects/pyright-errors/: pyproject.toml
.github/test_projects/pyright-errors/src/test_project/: pyright-errors.py
.github/test_projects/repo_root/: pyproject.toml
.github/workflows/: CI.yml  PR.yml  sync_github_issues_to_azdo.yml  test_actions.yml
analyze-project/: README.md  action.yml
check-project-version/: README.md  action.yml
setup-poetry/: README.md  action.yml
setup-python/: README.md  action.yml
update-project-version/: README.md  action.yml  update_version.py
