[project]
name = "only-ni-python-styleguide"
version = "0.1.0"
description = "Tests actions/analyze-project with a project that does not have mypy or pyright dependencies"
authors = [
    {name = "Joel Dixon",email = "joel.dixon@ni.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "test_project", from = "src"}]

[tool.poetry.group.lint.dependencies]
ni-python-styleguide = ">=0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
