[project]
name = "pyright-errors"
version = "0.1.0"
description = "Tests actions/analyze-project with a project that has pyright errors"
authors = [
    {name = "Joel Dixon",email = "joel.dixon@ni.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "test_project", from = "src"}]

[tool.poetry.group.lint.dependencies]
ni-python-styleguide = ">=0.4.1"
pyright = { version = ">=1.1.400", extras = ["nodejs"] }

[tool.pyright]
include = ["src/", "tests/"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
